--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,12 @@
 {
     "rewrites": [
         {
-            "source": "(.*)",
-            "destination": "/public/index.html"
-        },
-        {
             "source": "/api/(.*)",
             "destination": "/api/main.py"
+        },
+        {
+            "source": "(.*)",
+            "destination": "/public/$1"
         }
     ]
 }
