--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,5 @@
 {
     "version": 2,
-    "rewrites": [
-        {
-            "source": "/api/(.*)",
-            "destination": "backend/main.py"
-        },
-        {
-            "source": "/(.*)",
-            "destination": "/frontend/dist/$1"
-        }
-    ],
     "builds": [
         {
             "src": "backend/main.py",
@@ -21,6 +11,16 @@
             "config": {
                 "distDir": "dist"
             }
+        }
+    ],
+    "rewrites": [
+        {
+            "source": "/api/(.*)",
+            "destination": "backend/main.py"
+        },
+        {
+            "source": "/(.*)",
+            "destination": "frontend/$1"
         }
     ]
 }
