--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,7 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+backend/api/.env
+backend/api/__pycache__/main.cpython-313.pyc
+backend/api/__pycache__/appAnime2.cpython-313.pyc
+backend/api/__pycache__/appAnime2.cpython-313.pyc
